--- a/front/src/styles/Home.module.css
+++ b/front/src/styles/Home.module.css
@@ -41,7 +41,6 @@
   text-decoration: none;
 }
 .dropdownContainer {
-  width: 300px;
   margin-top: 50px;
   display: flex;
   flex-direction: column;
@@ -421,6 +420,30 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.loadStatsBtn {
+  border: none;
+  font-size: 16px;
+  padding: 7px 18px;
+  background-color: rgb(45, 45, 45);
+  color: whitesmoke;
+  border-radius: 3px;
+  height: 38px;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+.form-select {
+  margin-top: 3px;
+  margin-right: 15px;
+  background-color: white;
+  border: 0.5px solid rgb(228, 228, 228);
+  padding: 0.375rem 0.75rem;
+  border-radius: 3px;
+  width: 260px;
+  margin-right: 15px;
+  height: 38px;
 }
 
 /**/
