--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -12,7 +12,7 @@
   --banner-background: #eee8ff;
   --dropdown-background: white;
   --navbar-shadow: 0px 4px 7px rgba(0, 0, 0, 0.084);
-  --main-copy: #1a253e;
+  --main-copy: #0a0e18;
   --secondary-copy: #5c6977;
   --main-button-background-color: #3b0cc9;
   --navlink-hover-color: #9c7cfc;
