--- a/front/src/styles/LanguagePieChart.module.css
+++ b/front/src/styles/LanguagePieChart.module.css
@@ -7,6 +7,9 @@
   backdrop-filter: blur(5px);
   padding: 20px;
 }
+.languagePieChartContainer h3 {
+  width: fit-content;
+}
 .legendContainer {
   display: flex;
 }
