--- a/front/src/styles/LangDocs.module.css
+++ b/front/src/styles/LangDocs.module.css
@@ -2,9 +2,8 @@
   height: 320px;
   min-width: 550px;
   border-radius: 5px;
-  margin-right: 40px;
   background-color: var(--language-pie-chart-bg);
   backdrop-filter: blur(5px);
-  padding: 20px;
+  padding: 10px 30px 10px 10px;
   margin-bottom: 20px;
 }
