--- a/front/src/styles/LanguagePieChart.module.css
+++ b/front/src/styles/LanguagePieChart.module.css
@@ -1,11 +1,11 @@
 .languagePieChartContainer {
   height: 320px;
-  min-width: 550px;
+  min-width: 570px;
   border-radius: 5px;
-  margin-right: 40px;
+  margin-right: 20px;
   background-color: var(--language-pie-chart-bg);
   backdrop-filter: blur(5px);
-  padding: 20px;
+  padding: 20px 10px 20px 20px;
 }
 .languagePieChartContainer h3 {
   width: fit-content;
