--- a/front/src/styles/SegmentDistribution.module.css
+++ b/front/src/styles/SegmentDistribution.module.css
@@ -16,6 +16,7 @@
 .segmentTitle {
   display: flex;
   justify-content: flex-end;
+  flex-direction: column;
   align-items: flex-end;
 }
 .segmentTitle p {
