--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -35,6 +35,7 @@
   --slider: rgb(79, 69, 140);
   --graph-axis-text: #43467a;
   --desc-link-color: rgb(27, 117, 168);
+  --tooltip-link: rgb(50, 175, 247);
   --one-ngram-light: #37610eb8;
   --two-ngram-light: #7d1d1de2;
   --three-ngram-light: #0079a9ed;
