Added fixed x axis and new docs score graph

--- a/front/src/styles/LangDocs.module.css
+++ b/front/src/styles/LangDocs.module.css
@@ -7,3 +7,16 @@
   padding: 10px 30px 10px 10px;
   margin-bottom: 20px;
 }
+.tooltip {
+  background-color: white;
+  border: solid 1px rgb(199, 199, 199);
+  padding: 15px 35px 15px 15px;
+  border-radius: 5px;
+}
+.label {
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+.desc {
+  margin-bottom: 7px;
+}
