--- a/front/src/styles/DataAnalyticsReport.module.css
+++ b/front/src/styles/DataAnalyticsReport.module.css
@@ -26,6 +26,9 @@
   margin-bottom: 10px;
   margin-top: 45px;
 }
+.typeTokens{
+  height: 110px;
+}
 .dataReportContainer .singleLanguageReportDocs h3 {
   margin-top: 18px;
   width: 90%;
