--- a/front/src/styles/CollectionsGraph.module.css
+++ b/front/src/styles/CollectionsGraph.module.css
@@ -1,3 +1,13 @@
 .collectionsGraph {
-  height: 400px;
+  height: 320px;
+  width: fit-content
+}
+
+
+@media (max-width: 768px) {
+
+  .collectionsGraph {
+    height: 250px;
+  }
+  
 }
