--- a/front/src/styles/LanguagePieChart.module.css
+++ b/front/src/styles/LanguagePieChart.module.css
@@ -1,38 +1,46 @@
 .languagePieChartContainer {
   height: 340px;
-  min-width: 570px;
+  width: 100%;
   border-radius: 5px;
   margin-right: 20px;
   background-color: var(--language-pie-chart-bg);
   backdrop-filter: blur(5px);
   padding: 20px 10px 20px 20px;
 }
+
 .languagePieChartContainer h3 {
   width: fit-content;
 }
+
 .legendContainer {
   display: flex;
 }
+
 .legendText {
   color: var(--main-copy);
 }
+
 .tooltipPie {
   background-color: var(--main-background);
   padding: 20px;
 }
+
 .tooltipPie .pieLabel {
   font-weight: 600;
   font-size: 18px;
 }
 
-@media only screen and (max-width: 1200px) {
-  .languagePieChartContainer {
-    height: 320px;
-    width: fit-content;
-    border-radius: 5px;
-    margin-right: 40px;
-    background-color: var(--language-pie-chart-bg);
-    backdrop-filter: blur(5px);
-    padding: 15px;
+@media (max-width: 1100px) {
+  .languagePieChartContainer{
+    margin-right: 0;
+    height: 300px;
   }
+  .legendText {
+   font-size: 14px;
+  }
+  .languagePieChartContainer {
+    padding: 10px;
+  }
+  
+  
 }
