--- a/front/src/styles/Uploader.module.css
+++ b/front/src/styles/Uploader.module.css
@@ -3,9 +3,11 @@
   display: flex;
   flex-direction: column;
 }
+
 .form-group {
   margin-top: 30px;
 }
+
 .form-control {
   display: block;
   width: 100%;
@@ -22,6 +24,7 @@
   border-radius: 3px;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
 .form-select {
   margin-top: 3px;
   margin-right: 15px;
@@ -32,6 +35,7 @@
   width: 260px;
   margin-right: 15px;
 }
+
 .flex,
 .input-group,
 .inputs {
@@ -42,59 +46,76 @@
   width: 260px;
   margin-right: 10px;
 }
+
 .inputs label {
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
+
 .navbar-brand {
   margin-left: -7px;
 }
+
 .single-nav-link {
   margin-left: 30px;
   text-decoration: none;
   color: rgb(140, 5, 5);
 }
+
 .cards-container {
   display: flex;
 }
+
 .card-wrapper {
   width: 320px;
   margin-right: 15px;
 }
+
 .main-container {
   padding: 10px 120px;
 }
+
 .form-group input:not([type="checkbox"]):not([type="radio"]) {
   min-width: 240px;
 }
+
 .button-holder {
   width: 110px;
 }
+
 .button-holder-2 {
   width: 130px;
 }
+
 .button-holder-3 {
   width: 160px;
 }
+
 .button-holder button {
   padding: 4px 20px;
 }
+
 .label-holder {
   width: 80px;
 }
+
 .form-control-plaintext {
   padding: 0;
 }
+
 .bold {
   font-weight: bold;
 }
+
 .input-holder {
   width: 220px;
 }
+
 .parent-holder {
   display: flex;
   width: 30%;
 }
+
 .uploadToast {
   position: absolute;
   z-index: 10;
@@ -106,16 +127,20 @@
   background-color: white;
   width: 32vw;
 }
+
 .uploadToast h2 {
   margin-bottom: 20px;
   font-size: 22px;
 }
+
 .partiIcon {
   margin-left: 15px;
 }
+
 .dropdown-cont select {
   font-size: 16px;
 }
+
 .cmd {
   position: absolute;
   background-color: white;
@@ -127,18 +152,22 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .cmdContainer {
   background-color: rgb(25, 27, 25);
   border-radius: 10px;
   padding: 20px;
 }
+
 .cmdContainer p {
   color: rgb(25, 221, 221);
   line-height: 1.6;
 }
+
 .copyIcon {
   margin-left: 10px;
 }
+
 .cmd button {
   margin-top: 10px;
   margin-left: auto;
@@ -146,29 +175,7 @@
   cursor: pointer;
 }
 
-@media (max-width: 935px) {
-  .parent-holder {
-    margin-top: 30px;
-  }
-}
 
-@media (max-width: 930px) {
-  .main-container {
-    padding: 10px 60px;
-  }
-}
-
-@media (max-width: 768px) {
-  .main-container {
-    padding: 10px 40px;
-  }
-}
-
-@media (max-width: 541px) {
-  .main-container {
-    padding: 10px 30px;
-  }
-}
 
 .button-26,
 .button-27,
@@ -197,16 +204,19 @@
   text-decoration: none;
   display: flex;
 }
+
 .button-27,
 .cmd button {
   background-color: transparent;
   color: #1652f0;
 }
+
 .button-28 {
   background-color: #e1ecf4;
   border: 1px solid #7aa7c7;
   color: #39739d;
 }
+
 .button-26:disabled {
   opacity: 0.5;
 }
@@ -224,6 +234,7 @@
   background-color: #0039d7;
   border-color: #0039d7;
 }
+
 .button-8 {
   background-color: #e1ecf4;
   border-radius: 3px;
@@ -266,32 +277,41 @@
   box-shadow: none;
   color: #2c5777;
 }
+
 .form-label {
-  margin-bottom: 7px;
+  display: inline-block;
+  margin-bottom: 1px;
 }
+
 .file-cont {
   margin-bottom: 10px;
 }
+
 .name-cont {
   margin-right: 20px;
 }
+
 .form-control {
   width: 240px;
 }
+
 .file-input {
   width: 300px;
 }
+
 .uploader-buttons {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
 }
 
 .lang-inputs {
   display: flex;
 }
+
 .inputs {
-  margin: 25px 0;
+  margin: 20px 0;
 }
+
 .cmd button.closeCmd {
   display: flex;
   background-color: transparent;
@@ -303,6 +323,95 @@
   margin-left: auto;
   font-weight: 500;
 }
+
 .closeIcon {
   margin-left: 10px;
+}
+
+@media (max-width: 1200px) {
+  .viewerContainer {
+    padding: 10px 90px 40px 90px;
+  }
+
+  .main-container {
+    padding: 10px 60px;
+  }
+}
+
+@media (max-width: 930px) {
+  .main-container {
+    padding: 10px 60px 40px 60px;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-container {
+    padding: 10px 30px 40px 30px;
+  }
+
+  .uploader-buttons {
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: 634px) {
+  .form-control {
+    width: 50%;
+    min-width: none;
+  }
+
+  .file-input {
+    width: 50%;
+    min-width: none;
+  }
+
+  .dropdown-cont {
+    width: 50%;
+  }
+
+}
+
+@media (max-width: 541px) {
+  .main-container {
+    padding: 10px 15px 40px 15px;
+  }
+  .dropdown-cont, .name-cont, .file-cont {
+  margin-top: 10px;
+  }
+  .input-group {
+    flex-direction: column;
+  }
+
+  .uploader-buttons {
+    flex-direction: column;
+  }
+  .inputs {
+    margin: 15px 0;
+  }
+  
+  .lang-inputs{
+    flex-direction: column;
+  }
+  .form-control {
+    width: 100%;
+  }
+
+  .file-input {
+    width: 100%;
+  }
+
+  .dropdown-cont {
+    width: 100%;
+  }
+  .name-cont{
+    margin-right: 0;
+  }
+  .inputs label {
+    margin-bottom: 0px;
+  }
+  .button-26, .button-27, .button-28{
+    width: 100%;
+    margin-bottom: 10px;
+    justify-content: center;
+  }
 }
