--- a/front/src/styles/LanguagePieChart.module.css
+++ b/front/src/styles/LanguagePieChart.module.css
@@ -7,7 +7,9 @@
   backdrop-filter: blur(5px);
   padding: 20px 10px 20px 20px;
 }
-
+.perc{
+  margin-top: 5;
+}
 .languagePieChartContainer h3 {
   width: fit-content;
 }
