--- a/front/src/styles/ReportScores.module.css
+++ b/front/src/styles/ReportScores.module.css
@@ -72,10 +72,9 @@
   margin-bottom: 12px;
 }
 
-.desc {
-  margin-bottom: 7px;
-}
+
 .perc{
+  margin-top: 5px;
   margin-bottom: 7px;
   font-weight: 600;
 
